--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,6 +16,7 @@ p {
   display: flex;
   justify-content: space-between;
   align-content: center;
+  align-items: center;
   background: #f2f2f2;
   color: #003161;
   padding: 1em;
